; ModuleID = '/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_strlen.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_strlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utf8_data = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @utf8_strlen(%struct.utf8_data* %0) #0 {
  %2 = alloca %struct.utf8_data*, align 8
  %3 = alloca i64, align 8
  store %struct.utf8_data* %0, %struct.utf8_data** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load %struct.utf8_data*, %struct.utf8_data** %2, align 8
  %6 = load i64, i64* %3, align 8
  %7 = getelementptr inbounds %struct.utf8_data, %struct.utf8_data* %5, i64 %6
  %8 = getelementptr inbounds %struct.utf8_data, %struct.utf8_data* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %4
  br label %12

12:                                               ; preds = %11
  %13 = load i64, i64* %3, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* %3, align 8
  br label %4

15:                                               ; preds = %4
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
